Update sign-in and sign-up pages.

--- a/backend/core/templates/includes/aside.html
+++ b/backend/core/templates/includes/aside.html
@@ -117,6 +117,7 @@
         class="btn btn-outline-primary mt-4 w-100"
         href="https://www.creative-tim.com/learning-lab/bootstrap/overview/material-dashboard?ref=sidebarfree"
         type="button"
+        target="_blank"
       >Documentation</a>
       <!-- <a
         class="btn bg-gradient-primary w-100"
