--- a/backend/core/templates/includes/footer_login.html
+++ b/backend/core/templates/includes/footer_login.html
@@ -1,60 +1,63 @@
-<!-- footer.html -->
-<footer class="footer py-4">
-  <div class="container-fluid">
+<!-- footer_login.html -->
+<footer class="footer position-absolute bottom-2 py-2 w-100">
+  <div class="container">
     <div class="row align-items-center justify-content-lg-between">
-      <div class="col-lg-6 mb-lg-0 mb-4">
-        <div class="copyright text-center text-sm text-muted text-lg-start">
+      <div class="col-12 col-md-6 my-auto">
+        <div class="copyright text-center text-sm text-white text-lg-start">
           © <script>
             document.write(new Date().getFullYear())
           </script>,
-          made with <i class="fa fa-heart"></i> by
+          made with <i
+            class="fa fa-heart"
+            aria-hidden="true"
+          ></i> by
           <a
             href="https://www.creative-tim.com"
-            class="font-weight-bold"
+            class="font-weight-bold text-white"
             target="_blank"
           >Creative Tim</a>
           and
           <a
             href="https://github.com/rg3915/django-template-creativetim-material-dashboard"
-            class="font-weight-bold"
+            class="font-weight-bold text-white"
             target="_blank"
           >Regis do Python</a>
         </div>
       </div>
-      <div class="col-lg-6">
+      <div class="col-12 col-md-6">
         <ul class="nav nav-footer justify-content-center justify-content-lg-end">
           <li class="nav-item">
             <a
               href="https://github.com/rg3915/django-template-creativetim-material-dashboard"
-              class="nav-link text-muted"
+              class="nav-link text-white"
               target="_blank"
             >My Github</a>
           </li>
           <li class="nav-item">
             <a
               href="https://www.creative-tim.com"
-              class="nav-link text-muted"
+              class="nav-link text-white"
               target="_blank"
             >Creative Tim</a>
           </li>
           <li class="nav-item">
             <a
               href="https://www.creative-tim.com/presentation"
-              class="nav-link text-muted"
+              class="nav-link text-white"
               target="_blank"
             >About Us</a>
           </li>
           <li class="nav-item">
             <a
               href="https://www.creative-tim.com/blog"
-              class="nav-link text-muted"
+              class="nav-link text-white"
               target="_blank"
             >Blog</a>
           </li>
           <li class="nav-item">
             <a
               href="https://www.creative-tim.com/license"
-              class="nav-link pe-0 text-muted"
+              class="nav-link pe-0 text-white"
               target="_blank"
             >License</a>
           </li>
