Adiciona popup na tabela.

--- a/backend/core/templates/base.html
+++ b/backend/core/templates/base.html
@@ -38,6 +38,8 @@
   <!-- Nepcha Analytics (nepcha.com) -->
   <!-- Nepcha is a easy-to-use web analytics. No cookies and fully compliant with GDPR, CCPA and PECR. -->
     <script defer data-site="YOUR_DOMAIN_HERE" src="https://api.nepcha.com/js/nepcha-analytics.js"></script>
+
+    {% block css %}{% endblock css %}
   </head>
 
   <body class="g-sidenav-show  bg-gray-200">
