--- a/backend/core/templates/tables.html
+++ b/backend/core/templates/tables.html
@@ -313,9 +313,28 @@
                       </div>
                     </td>
                     <td class="align-middle">
-                      <button class="btn btn-link text-secondary mb-0">
+                      <button
+                        class="btn btn-link text-secondary mb-0"
+                        aria-haspopup="true"
+                        data-bs-toggle="dropdown"
+                        aria-expanded="false"
+                      >
                         <i class="fa fa-ellipsis-v text-xs"></i>
                       </button>
+                      <ul class="dropdown-menu px-2 py-3 ms-sm-n4 ms-n5">
+                        <li><a
+                          class="dropdown-item border-radius-md"
+                          href="javascript:;"
+                        >Action</a></li>
+                        <li><a
+                          class="dropdown-item border-radius-md"
+                          href="javascript:;"
+                        >Another action</a></li>
+                        <li><a
+                          class="dropdown-item border-radius-md"
+                          href="javascript:;"
+                        >Something else here</a></li>
+                      </ul>
                     </td>
                   </tr>
                   <tr>
@@ -360,10 +379,25 @@
                       <button
                         class="btn btn-link text-secondary mb-0"
                         aria-haspopup="true"
+                        data-bs-toggle="dropdown"
                         aria-expanded="false"
                       >
                         <i class="fa fa-ellipsis-v text-xs"></i>
                       </button>
+                      <ul class="dropdown-menu px-2 py-3 ms-sm-n4 ms-n5">
+                        <li><a
+                          class="dropdown-item border-radius-md"
+                          href="javascript:;"
+                        >Action</a></li>
+                        <li><a
+                          class="dropdown-item border-radius-md"
+                          href="javascript:;"
+                        >Another action</a></li>
+                        <li><a
+                          class="dropdown-item border-radius-md"
+                          href="javascript:;"
+                        >Something else here</a></li>
+                      </ul>
                     </td>
                   </tr>
                   <tr>
@@ -408,10 +442,25 @@
                       <button
                         class="btn btn-link text-secondary mb-0"
                         aria-haspopup="true"
+                        data-bs-toggle="dropdown"
                         aria-expanded="false"
                       >
                         <i class="fa fa-ellipsis-v text-xs"></i>
                       </button>
+                      <ul class="dropdown-menu px-2 py-3 ms-sm-n4 ms-n5">
+                        <li><a
+                          class="dropdown-item border-radius-md"
+                          href="javascript:;"
+                        >Action</a></li>
+                        <li><a
+                          class="dropdown-item border-radius-md"
+                          href="javascript:;"
+                        >Another action</a></li>
+                        <li><a
+                          class="dropdown-item border-radius-md"
+                          href="javascript:;"
+                        >Something else here</a></li>
+                      </ul>
                     </td>
                   </tr>
                   <tr>
@@ -456,10 +505,25 @@
                       <button
                         class="btn btn-link text-secondary mb-0"
                         aria-haspopup="true"
+                        data-bs-toggle="dropdown"
                         aria-expanded="false"
                       >
                         <i class="fa fa-ellipsis-v text-xs"></i>
                       </button>
+                      <ul class="dropdown-menu px-2 py-3 ms-sm-n4 ms-n5">
+                        <li><a
+                          class="dropdown-item border-radius-md"
+                          href="javascript:;"
+                        >Action</a></li>
+                        <li><a
+                          class="dropdown-item border-radius-md"
+                          href="javascript:;"
+                        >Another action</a></li>
+                        <li><a
+                          class="dropdown-item border-radius-md"
+                          href="javascript:;"
+                        >Something else here</a></li>
+                      </ul>
                     </td>
                   </tr>
                   <tr>
@@ -504,10 +568,25 @@
                       <button
                         class="btn btn-link text-secondary mb-0"
                         aria-haspopup="true"
+                        data-bs-toggle="dropdown"
                         aria-expanded="false"
                       >
                         <i class="fa fa-ellipsis-v text-xs"></i>
                       </button>
+                      <ul class="dropdown-menu px-2 py-3 ms-sm-n4 ms-n5">
+                        <li><a
+                          class="dropdown-item border-radius-md"
+                          href="javascript:;"
+                        >Action</a></li>
+                        <li><a
+                          class="dropdown-item border-radius-md"
+                          href="javascript:;"
+                        >Another action</a></li>
+                        <li><a
+                          class="dropdown-item border-radius-md"
+                          href="javascript:;"
+                        >Something else here</a></li>
+                      </ul>
                     </td>
                   </tr>
                   <tr>
@@ -552,10 +631,25 @@
                       <button
                         class="btn btn-link text-secondary mb-0"
                         aria-haspopup="true"
+                        data-bs-toggle="dropdown"
                         aria-expanded="false"
                       >
                         <i class="fa fa-ellipsis-v text-xs"></i>
                       </button>
+                      <ul class="dropdown-menu px-2 py-3 ms-sm-n4 ms-n5">
+                        <li><a
+                          class="dropdown-item border-radius-md"
+                          href="javascript:;"
+                        >Action</a></li>
+                        <li><a
+                          class="dropdown-item border-radius-md"
+                          href="javascript:;"
+                        >Another action</a></li>
+                        <li><a
+                          class="dropdown-item border-radius-md"
+                          href="javascript:;"
+                        >Something else here</a></li>
+                      </ul>
                     </td>
                   </tr>
                 </tbody>
